--- a/app/src/main/res/layout/activity_live_video_player.xml
+++ b/app/src/main/res/layout/activity_live_video_player.xml
@@ -13,9 +13,9 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -24,6 +24,26 @@
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView android:id="@+id/player_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/back_follow"
+        android:backgroundTint="@color/colorOptionText"
+        android:includeFontPadding="false"
+        android:paddingStart="@dimen/_10sdp"
+        android:paddingTop="@dimen/_3sdp"
+        android:paddingEnd="@dimen/_10sdp"
+        android:paddingBottom="@dimen/_3sdp"
+        android:text="@string/live"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="@dimen/_10ssp"
+        app:fontFamily="@font/poppins_medium"
+        tools:ignore="RtlCompat"
+        android:visibility="visible"
+        android:layout_gravity="end"
+        android:layout_margin="@dimen/_20sdp"/>
 
     <!--<LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +80,7 @@
 
     </LinearLayout>-->
 
-    <LinearLayout
+    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -69,12 +89,12 @@
         android:id="@+id/video_start_control_layout"
         android:visibility="visible">
 
-       <!-- <EditText
+       <EditText
             android:id="@+id/video_name_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="stream name (add live=1 if it is live e.g. test live=1)"
-            android:textAppearance="?android:textAppearanceMedium" />-->
+            android:textAppearance="?android:textAppearanceMedium" />
 
         <Button
             android:id="@+id/play_live_video"
@@ -87,6 +107,6 @@
             android:textColor="@android:color/white"
             android:textAppearance="?android:textAppearanceMedium"
             />
-    </LinearLayout>
+    </LinearLayout>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
