--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -248,6 +248,53 @@
                     app:fontFamily="@font/poppins_light"
                     tools:text="@string/dummy_event_description" />
 
+                <LinearLayout
+                    android:id="@+id/linearSelectManager"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:paddingStart="@dimen/_12sdp"
+                    android:paddingEnd="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_15sdp">
+
+                    <androidx.appcompat.widget.AppCompatTextView
+                        android:id="@+id/tvSelectManagerTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/organiser"
+                        app:fontFamily="@font/poppins_medium"
+                        android:textColor="@color/white"
+                        android:includeFontPadding="false"
+                        android:textSize="@dimen/_13ssp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="@dimen/_10sdp"
+                        android:background="@color/colorBackHome"
+                        android:orientation="horizontal"
+                        android:gravity="center_vertical">
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/imgSelectManagerProfile"
+                            android:layout_width="@dimen/_40sdp"
+                            android:layout_height="@dimen/_40sdp"
+                            android:src="@drawable/place_holder"/>
+
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvSelectManagerName"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="@dimen/_10sdp"
+                            tools:ignore="RtlCompat"
+                            tools:text="Samantha Rose"
+                            android:textSize="@dimen/_12ssp"
+                            android:fontFamily="@font/poppins_medium"
+                            android:textColor="@color/white"
+                            android:includeFontPadding="false"
+                            android:layout_weight="1"/>
+                    </LinearLayout>
+                </LinearLayout>
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvEventDate"
                     android:layout_width="match_parent"
