--- a/app/src/main/res/layout/bottom_select_manager_layout.xml
+++ b/app/src/main/res/layout/bottom_select_manager_layout.xml
@@ -51,46 +51,46 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:clipToPadding="false"
-                android:paddingTop="@dimen/_10sdp"
-                android:paddingStart="@dimen/_12sdp"
-                android:paddingEnd="@dimen/_12sdp"
                 android:overScrollMode="never"
+                android:paddingStart="@dimen/_12sdp"
+                android:paddingTop="@dimen/_10sdp"
+                android:paddingEnd="@dimen/_12sdp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toTopOf="@id/tvSelectManagerBottom"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvSelectManagerTitle"
-                android:visibility="gone"/>
+                app:layout_constraintTop_toBottomOf="@id/tvSelectManagerTitle" />
 
 
             <LinearLayout
                 android:id="@+id/linearSelectManagerEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvSelectManagerTitle"
-                app:layout_constraintBottom_toTopOf="@id/tvSelectManagerBottom"
-                android:orientation="vertical"
                 android:gravity="center_horizontal"
+                android:orientation="vertical"
                 android:padding="@dimen/_12sdp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@id/tvSelectManagerBottom"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvSelectManagerTitle">
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/editSelectManagerEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/_5sdp"
                     android:background="@drawable/back_border_black"
                     android:fontFamily="@font/poppins_light"
                     android:imeOptions="actionDone"
                     android:includeFontPadding="false"
+                    android:inputType="textEmailAddress"
                     android:lines="1"
                     android:padding="@dimen/_5sdp"
                     android:singleLine="true"
-                    android:inputType="textEmailAddress"
                     android:textColor="@color/white"
                     android:textSize="@dimen/_13ssp"
-                    tools:ignore="RtlCompat"
-                    android:layout_margin="@dimen/_5sdp" />
+                    tools:ignore="RtlCompat" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvSelectManagerEmailSend"
@@ -108,8 +108,9 @@
                     android:paddingBottom="@dimen/_10sdp"
                     android:text="@string/send_email"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/_14ssp"/>
+                    android:textSize="@dimen/_14ssp" />
             </LinearLayout>
+
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvSelectManagerBottom"
                 android:layout_width="wrap_content"
