--- a/app/src/main/res/layout/activity_live_video_player.xml
+++ b/app/src/main/res/layout/activity_live_video_player.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="UTF-8"?><!-- Copyright (C) 2016 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,36 +13,65 @@
      limitations under the License.
 -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:keepScreenOn="true">
 
-    <com.google.android.exoplayer2.ui.SimpleExoPlayerView android:id="@+id/player_view"
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/back_follow"
-        android:backgroundTint="@color/colorOptionText"
-        android:includeFontPadding="false"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingTop="@dimen/_3sdp"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_3sdp"
-        android:text="@string/live"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="@dimen/_10ssp"
-        app:fontFamily="@font/poppins_medium"
-        tools:ignore="RtlCompat"
-        android:visibility="visible"
         android:layout_gravity="end"
-        android:layout_margin="@dimen/_20sdp"/>
+        android:layout_margin="@dimen/_12sdp"
+        android:orientation="horizontal">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvLiveStreamCountDown"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/back_follow"
+            android:backgroundTint="@color/colorOptionText"
+            android:includeFontPadding="false"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_3sdp"
+            android:text="@string/live"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="visible"
+            app:fontFamily="@font/poppins_medium"
+            tools:ignore="RtlCompat"
+            android:layout_marginEnd="@dimen/_10sdp"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvStreamLive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@drawable/back_follow"
+            android:backgroundTint="@color/colorOptionText"
+            android:includeFontPadding="false"
+            android:paddingStart="@dimen/_10sdp"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:paddingBottom="@dimen/_3sdp"
+            android:text="@string/live"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_10ssp"
+            android:visibility="visible"
+            app:fontFamily="@font/poppins_medium"
+            tools:ignore="RtlCompat" />
+    </LinearLayout>
 
     <!--<LinearLayout
         android:layout_width="match_parent"
