--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -46,7 +46,44 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <androidx.appcompat.widget.AppCompatTextView
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="@dimen/_12sdp">
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvEventOrganiser"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginEnd="@dimen/_2sdp"
+                            tools:ignore="RtlCompat"
+                            android:text="@string/event_organiser"
+                            android:textSize="@dimen/_10ssp"
+                            app:fontFamily="@font/poppins_medium"
+                            android:includeFontPadding="false"
+                            android:textColor="@color/colorBlackText"
+                            android:textAlignment="center"
+                            android:padding="@dimen/_3sdp"
+                            android:background="@drawable/back_round_white"/>
+                        <androidx.appcompat.widget.AppCompatTextView
+                            android:id="@+id/tvDJOrganiser"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginStart="@dimen/_2sdp"
+                            tools:ignore="RtlCompat"
+                            android:text="@string/dj_organiser"
+                            android:textSize="@dimen/_10ssp"
+                            app:fontFamily="@font/poppins_medium"
+                            android:includeFontPadding="false"
+                            android:textColor="@color/white"
+                            android:textAlignment="center"
+                            android:padding="@dimen/_3sdp"
+                            android:background="@drawable/back_border_white"/>
+                    </LinearLayout>
+
+                    <!--<androidx.appcompat.widget.AppCompatTextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_10sdp"
@@ -61,7 +98,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginTop="@dimen/_5sdp"
-                        android:background="@color/white" />
+                        android:background="@color/white" />-->
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recyclerHomeManager"
