--- a/app/src/main/res/layout/item_home_top_story.xml
+++ b/app/src/main/res/layout/item_home_top_story.xml
@@ -33,7 +33,8 @@
                 android:layout_width="@dimen/_24sdp"
                 android:layout_height="@dimen/_24sdp"
                 android:src="@drawable/dummy"
-                android:background="@drawable/back_dash_border"/>
+                android:padding="@dimen/_2sdp"
+                android:background="@drawable/back_dash_manager_border"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/tvHomeManagerName"
