--- a/app/src/main/res/layout/item_search_suggestion.xml
+++ b/app/src/main/res/layout/item_search_suggestion.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <LinearLayout
+        android:id="@+id/linearMainSearchData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_7sdp"
-        android:layout_marginRight="@dimen/_7sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:orientation="vertical">
 
@@ -29,37 +30,57 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/dummy"/>
+                app:srcCompat="@drawable/dummy" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/viewManager"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_2sdp"
+            android:background="@drawable/back_manager_data" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvManagerName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:fontFamily="@font/poppins_medium"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:includeFontPadding="false"
+            android:lines="1"
+            android:singleLine="true"
+            android:text="User Name"
+            android:textColor="@color/white"
             android:textSize="@dimen/_10sdp"
+            app:fontFamily="@font/poppins_medium" />
+
+
+        <!--<androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvManagerType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fontFamily="@font/poppins_medium"
+            android:textSize="@dimen/_8sdp"
             android:includeFontPadding="false"
             android:textColor="@color/white"
             android:text="User Name"
             android:singleLine="true"
-            android:lines="1"
-            android:layout_marginTop="@dimen/_8sdp"/>
-
+            android:lines="1"/>-->
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvFollow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/back_follow"
-            android:text="@string/follow"
-            android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_8sdp"
-            android:paddingTop="@dimen/_2sdp"
-            android:paddingBottom="@dimen/_2sdp"
-            app:fontFamily="@font/poppins_medium"
-            android:textColor="@color/white"
-            android:includeFontPadding="false"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="@dimen/_12sdp"/>
+            android:layout_marginTop="@dimen/_12sdp"
+            android:background="@drawable/back_follow"
+            android:includeFontPadding="false"
+            android:paddingStart="@dimen/_8sdp"
+            android:paddingTop="@dimen/_2sdp"
+            android:paddingEnd="@dimen/_8sdp"
+            android:paddingBottom="@dimen/_2sdp"
+            android:text="@string/follow"
+            android:textColor="@color/white"
+            app:fontFamily="@font/poppins_medium" />
     </LinearLayout>
 </layout>
