--- a/app/src/main/res/layout/item_view_sent_request.xml
+++ b/app/src/main/res/layout/item_view_sent_request.xml
@@ -19,7 +19,7 @@
             android:layout_width="@dimen/_40sdp"
             android:layout_height="@dimen/_40sdp"
             android:src="@drawable/place_holder"
-            />
+            android:padding="@dimen/_2sdp"/>
 
         <LinearLayout
             android:layout_width="0dp"
