--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="@color/black"
-    tools:context=".MainActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/splash_logo" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:context=".MainActivity">
 
-</LinearLayout>
+        <RelativeLayout
+            android:id="@+id/rlSplash"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/img_splash"
+            app:layout_constraintBottom_toTopOf="@id/viewSplash"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                app:fontFamily="@font/roboto_bold"
+                android:includeFontPadding="false"
+                android:text="@string/welcome"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_46ssp"/>
+        </RelativeLayout>
+
+        <View
+            android:id="@+id/viewSplash"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:background="@color/white"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgClose"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_close_round"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/rlSplash"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/rlSplash" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgHome"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_home_btn_round"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/rlSplash"
+            app:layout_constraintEnd_toStartOf="@id/imgClose"
+            app:layout_constraintTop_toBottomOf="@id/rlSplash" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
